# charms

./: .aiignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  github-actions.Dockerfile  prover.Dockerfile
.github/workflows/: build-image.yml  build-prover.yml
charms-app-runner/: Cargo.toml
charms-app-runner/src/: lib.rs
charms-client/: Cargo.toml
charms-client/sp1-verifier-v6_0/: Cargo.toml
charms-client/sp1-verifier-v6_0/src/: lib.rs
charms-client/src/: bitcoin_tx.rs  cardano_tx.rs  finality.rs  lib.rs  request.rs  sorted_app_map.rs  tx.rs
charms-data/: Cargo.toml
charms-data/src/: lib.rs
charms-lib/: Cargo.toml  README.md
charms-lib/src/: lib.rs
charms-lib/test/: bitcoin-tx.json  cardano-tx.json
charms-proof-wrapper/: Cargo.toml
charms-proof-wrapper/src/: lib.rs
charms-sdk/: Cargo.toml
charms-sdk/src/: lib.rs
charms-spell-checker/: Cargo.toml  README.md
charms-spell-checker/src/: lib.rs  main.rs
example-projects/charmix/: Cargo.toml  README.md
example-projects/charmix/spells/: mint-nft.yaml  send.yaml
example-projects/charmix/src/: lib.rs
example-projects/toad-token/: Cargo.toml  README.md
example-projects/toad-token/spells/: mint-nft.yaml  mint-token.yaml  send.yaml  send420.yaml
example-projects/toad-token/src/: lib.rs
finality-proofs/btc-finality/: Cargo.toml
finality-proofs/btc-finality/src/: lib.rs
scripts/: mint-cardano-token.sh
scrolls/: .gitignore  CLAUDE.md  Cargo.toml  README.md  canister_ids.json  dfx.json  icp.yaml
scrolls/.icp/data/mappings/: ic.ids.json
scrolls/src/scrolls-api/: Cargo.toml  wrangler.toml
scrolls/src/scrolls-api/src/: lib.rs
scrolls/src/scrolls_bitcoin/: Cargo.toml  config.yaml  scrolls_bitcoin.did
scrolls/src/scrolls_bitcoin/src/: lib.rs
scrolls/src/scrolls_cardano/: Cargo.toml  config.yaml  scrolls_cardano.did
scrolls/src/scrolls_cardano/src/: lib.rs  mithril.rs
scrolls/src/scrolls_cardano/tests/: canister_integration.rs
scrolls/stubs/getrandom-04/: Cargo.toml
scrolls/stubs/getrandom-04/src/: lib.rs
scrolls/stubs/reqwest/: Cargo.toml
scrolls/stubs/reqwest/src/: lib.rs
scrolls/stubs/uuid/: Cargo.toml
scrolls/stubs/uuid/src/: lib.rs
scrolls/stubs/wasm-bindgen/: Cargo.toml
scrolls/stubs/wasm-bindgen-macro/: Cargo.toml
scrolls/stubs/wasm-bindgen-macro/src/: lib.rs
scrolls/stubs/wasm-bindgen/src/: lib.rs
src/: lib.rs  spell.rs
src/cli/: app.rs  mod.rs  server.rs  spell.rs  tx.rs  util.rs  wallet.rs
src/spell/: mod.rs  prove.rs  prove_spell_tx.rs  request.rs  sorted_app_map.rs  validate.rs
src/tx/: bitcoin_tx.rs  cardano_tx.rs  mod.rs  scrolls_bitcoin.rs
src/tx/cardano_tx/: mod.rs  protocol.json
src/utils/: mod.rs  prover.rs
src/utils/sp1/: cuda.rs  mod.rs
