[package]
name = "charms"
description = "Programmable assets on Bitcoin and beyond"
repository = "https://github.com/CharmsDev/charms"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[workspace.package]
version = "0.11.0"
edition = "2024"
authors = ["Ivan Mikushin <ivan@charms.dev>"]
license = "MIT"

[dependencies]
anyhow = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { workspace = true }
ark-std = { workspace = true }
axum = { version = "0.8.8", features = ["http2"] }
axum-macros = { version = "0.5.0" }
bech32 = { version = "0.11.1" }
bincode = { version = "1.3.3" }
bitcoin = { workspace = true, features = ["rand", "rand-std"] }
charms-app-runner = { path = "./charms-app-runner", version = "0.11.0" }
charms-client = { path = "./charms-client", version = "0.11.0" }
charms-data = { path = "./charms-data", version = "0.11.0" }
charms-lib = { path = "./charms-lib", version = "0.11.0" }
charms-proof-wrapper = { path = "./charms-proof-wrapper", version = "0.11.0" }
clap = { version = "4.5.54", features = ["derive"] }
clap_complete = { version = "4.5.65" }
cml-chain = { workspace = true }
const_format = { version = "0.2.35" }
hex = { workspace = true }
redis = { version = "0.32.7", optional = true, features = ["tokio-rustls-comp"] }
redis-macros = { version = "0.5.6" }
reqwest = { version = "0.12.28", features = ["json"] }
rslock = { version = "0.7.3", optional = true, features = ["tokio-comp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { version = "3.16.1", features = ["base64"] }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-cuda = { workspace = true }
sp1-prover = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { version = "1.49", features = ["full"] }
toml = { version = "0.8.23" }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = { workspace = true }
tracing-forest = { version = "0.1.6" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twirp = { package = "twirp-rs", version = "0.13.0-succinct" }

[features]
prover = ["sp1-sdk/native-gnark", "sp1-prover/native-gnark", "redis", "rslock"]
none = []

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }

[workspace]
members = [
    ".",
    "charms-app-runner",
    "charms-client",
    "charms-data",
    "charms-lib",
    "charms-proof-wrapper",
    "charms-sdk",
]
exclude = [
    "charms-spell-checker",
]

resolver = "3"

[workspace.dependencies]
anyhow = { version = "1.0.100" }
ark-bls12-381 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-groth16 = { version = "0.5.0" }
ark-relations = { version = "0.5.1" }
ark-serialize = { version = "0.5.0" }
ark-snark = { version = "0.5.1" }
ark-std = { version = "0.5.0" }
bitcoin = { version = "0.32.8" }
ciborium = { version = "0.2.2" }
ciborium-io = { version = "0.2.2" }
cml-chain = { version = "6.2.0", default-features = false }
cml-core = { version = "6.2.0", default-features = false }
hex = { version = "0.4.3" }
proptest = { version = "1.9.0" }
proptest-derive = { version = "0.5.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0.149" }
serde_yaml = { version = "0.9.34" }
sha2 = { version = "0.10.9" }
sp1-core-machine = { version = "5.2.4" }
sp1-cuda = { version = "5.2.4" }
sp1-primitives = { version = "5.2.4" }
sp1-prover = { version = "5.2.4" }
sp1-sdk = { version = "5.2.4", default-features = false, features = ["network"] }
sp1-verifier = { version = "5.2.4" }
sp1-zkvm = { version = "5.2.4" }
test-strategy = { version = "0.4.3" }
tracing = { version = "0.1" }

[profile.test]
lto = "off"
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "debuginfo"
overflow-checks = true
panic = "abort"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
