[package]
name = "charms"
description = "Programmable assets on Bitcoin and beyond"
repository = "https://github.com/CharmsDev/charms"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[workspace]
members = [
    ".",
    "charms-app-runner",
    "charms-client",
    "charms-data",
    "charms-lib",
    "charms-proof-wrapper",
    "charms-sdk",
]
exclude = ["charms-spell-checker"]

resolver = "3"

[workspace.package]
version = "11.0.0-dev"
edition = "2024"
authors = ["Ivan Mikushin <ivan@charms.dev>"]
license = "MIT"

[workspace.dependencies]
anyhow = { version = "1.0.102" }
ark-bls12-381 = { version = "0.5.0" }
ark-ec = { version = "0.5.0" }
ark-ff = { version = "0.5.0" }
ark-groth16 = { version = "0.5.0" }
ark-relations = { version = "0.5.1" }
ark-serialize = { version = "0.5.0" }
ark-snark = { version = "0.5.1" }
ark-std = { version = "0.5.0" }
bitcoin = { version = "0.32.8" }
ciborium = { version = "0.2.2" }
ciborium-io = { version = "0.2.2" }
cml-chain = { version = "6.2.0", default-features = false }
cml-core = { version = "6.2.0", default-features = false }
hex = { version = "0.4.3" }
pallas-addresses = { version = "0.34.0" }
pallas-codec = { version = "0.34.0" }
pallas-crypto = { version = "0.34.0" }
pallas-primitives = { version = "0.34.0" }
pallas-txbuilder = { version = "0.34.0" }
proptest = { version = "1.10.0" }
proptest-derive = { version = "0.5.1" }
serde = { version = "1.0" }
serde_json = { version = "1.0.149" }
serde_yaml = { version = "0.9.34" }
sha2 = { version = "0.10.9" }
sp1-core-machine = { version = "5.2.4" }
sp1-cuda = { version = "5.2.4" }
sp1-primitives = { version = "5.2.4" }
sp1-prover = { version = "5.2.4" }
sp1-sdk = { version = "5.2.4", default-features = false, features = ["network"] }
sp1-verifier = { version = "5.2.4" }
sp1-zkvm = { version = "5.2.4" }
test-strategy = { version = "0.4.5" }
tracing = { version = "0.1" }

[features]
prover = ["sp1-sdk/native-gnark", "sp1-prover/native-gnark", "redis", "rslock"]
none = []

[dependencies]
anyhow = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-relations = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { workspace = true }
ark-std = { workspace = true }
axum = { version = "0.8.8", features = ["http2"] }
axum-macros = { version = "0.5.0" }
bech32 = { version = "0.11.1" }
bincode = { version = "1.3.3" }
bitcoin = { workspace = true, features = ["rand", "rand-std"] }
candid = { version = "0.10" }
charms-app-runner = { path = "./charms-app-runner", version = "11.0.0-dev" }
charms-client = { path = "./charms-client", version = "11.0.0-dev" }
charms-data = { path = "./charms-data", version = "11.0.0-dev" }
charms-lib = { path = "./charms-lib", version = "11.0.0-dev" }
charms-proof-wrapper = { path = "./charms-proof-wrapper", version = "11.0.0-dev" }
clap = { version = "4.5.60", features = ["derive"] }
clap_complete = { version = "4.5.66" }
cml-chain = { workspace = true }
cml-core = { workspace = true }
const_format = { version = "0.2.35" }
hex = { workspace = true }
hex-literal = { version = "1.1.0" }
ic-agent = { version = "0.38" }
pallas-addresses = { workspace = true }
pallas-codec = { workspace = true }
pallas-crypto = { workspace = true }
pallas-primitives = { workspace = true }
pallas-txbuilder = { workspace = true }
redis = { version = "0.32.7", optional = true, features = ["tokio-rustls-comp"] }
redis-macros = { version = "0.5.6" }
reqwest = { version = "0.12.28", features = ["json"] }
rslock = { version = "0.7.4", optional = true, features = ["tokio-comp"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { version = "3.16.1", features = ["base64"] }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
sp1-core-machine = { workspace = true }
sp1-cuda = { workspace = true }
sp1-prover = { workspace = true }
sp1-sdk = { workspace = true }
tokio = { version = "1.49", features = ["full"] }
toml = { version = "0.8.23" }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = { workspace = true }
tracing-forest = { version = "0.1.6" }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
twirp = { package = "twirp-rs", version = "0.13.0-succinct" }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }

[profile.test]
lto = "off"
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "debuginfo"
overflow-checks = true
panic = "abort"

[patch.crates-io]
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-4.0.0" }
