[package]
name = "charms-app-runner"
description = "Charms app runner"

readme = "../README.md"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
charms-data = { path = "../charms-data", version = "11.0.0" }
rand = { version = "0.10.0" }
sha2 = { workspace = true }
wasmi = { version = "1.0.9", default-features = false, features = ["std", "prefer-btree-collections"] }
