[package]
name = "charms-client"
description = "Charms client library"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
charms-app-runner = { path = "../charms-app-runner", version = "11.0.0-dev" }
charms-data = { path = "../charms-data", version = "11.0.0-dev" }
cml-chain = { workspace = true, default-features = false }
cml-core = { workspace = true, default-features = false }
pallas-primitives = { workspace = true }
pallas-addresses = { workspace = true }
pallas-codec = { workspace = true }
pallas-crypto = { workspace = true }
enum_dispatch = { version = "0.3.13" }
hex = { workspace = true }
hex-literal = { version = "1.1.0" }
serde = { workspace = true, features = ["derive"] }
serde_with = { version = "3.16.1", features = ["hex"] }
sha2 = { workspace = true }
sp1-primitives = { workspace = true }
sp1-verifier = { workspace = true }
strum = { version = "0.27.2", features = ["derive"] }
tracing = { workspace = true }
uplc = { version = "1.1.21" }

[dev-dependencies]
ciborium = { workspace = true }
serde_json = { workspace = true }
