[package]
name = "charms-client"
description = "Charms client library"

readme = "../README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
anyhow = { workspace = true }
ark-bls12-381 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-snark = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
charms-app-runner = { path = "../charms-app-runner", version = "15.1.0" }
charms-data = { path = "../charms-data", version = "15.1.0" }
cml-chain = { workspace = true, default-features = false }
cml-core = { workspace = true, default-features = false }
const_format = { version = "0.2.36" }
enum_dispatch = { version = "0.3.13" }
hex = { workspace = true }
hex-literal = { version = "1.1.0" }
pallas-crypto = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_with = { version = "3.21.0", features = ["hex", "base64"] }
sha2 = { workspace = true }
sp1-primitives = { workspace = true }
sp1-verifier = { workspace = true, default-features = false }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = { version = "2" }
tracing = { workspace = true }
uplc = { version = "=1.1.21" }

[dev-dependencies]
charms-data = { path = "../charms-data", version = "15.1.0", features = ["test"] }
ciborium = { workspace = true }
ic-pub-key = "0.3.0"
proptest = { workspace = true }
proptest-derive = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
test-strategy = { workspace = true }
