[package]
name = "charms-data"
description = "Data types for Charms apps"

version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true

[features]
test = ["dep:proptest", "dep:proptest-derive", "dep:test-strategy"]

[dependencies]
anyhow = { workspace = true }
ark-std = { version = "0.5.0" }
ciborium = { workspace = true }
ciborium-io = { workspace = true }
hex = { workspace = true }
proptest = { workspace = true, optional = true }
proptest-derive = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
test-strategy = { workspace = true, optional = true }

[dev-dependencies]
proptest = { workspace = true }
proptest-derive = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
test-strategy = { workspace = true }
