[package]
name = "charms-lib"
description = "Charms Wasm Library"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
charms-client = { path = "../charms-client", version = "0.10.3" }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dev-dependencies]
serde_json = { workspace = true }
