[package]
name = "charms-lib"
description = "Charms Wasm Library"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen"]

[dependencies]
charms-client = { path = "../charms-client", version = "11.0.0" }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.114", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
