[package]
name = "charms-lib"
description = "Charms Wasm Library"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen", "serde-wasm-bindgen", "getrandom"]

[dependencies]
charms-client = { path = "../charms-client", version = "14.0.0" }
getrandom = { version = "0.4.2", optional = true, features = ["wasm_js"] }
serde-wasm-bindgen = { version = "0.6.5", optional = true }
wasm-bindgen = { version = "0.2.118", optional = true }

[dev-dependencies]
serde_json = { workspace = true }
