[package]
name = "charms-spell-checker"
description = "Recursive validation of spells creating Charms"

version = "12.0.0"
edition = "2024"
authors = ["Ivan Mikushin <ivan@charms.dev>"]
license = "MIT"

[workspace]

[dependencies]
charms-client = { path = "../charms-client", version = "12.0.0" }
charms-data = { path = "../charms-data", version = "12.0.0" }
sp1-zkvm = { version = "6.0.2", features = ["verify"] }

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "debuginfo"
overflow-checks = true

[patch.crates-io]
secp256k1 = { git = "https://github.com/sp1-patches/rust-secp256k1", tag = "patch-0.29.1-sp1-6.0.0" }
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", package = "sha2", tag = "patch-sha2-0.10.9-sp1-6.0.0" }
