[workspace]
members = [
    "src/scrolls_bitcoin",
    "src/scrolls_cardano",
]
resolver = "2"

[profile.test]
lto = "off"
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
strip = "debuginfo"
overflow-checks = true
panic = "abort"

[patch.crates-io]
getrandom = { git = "https://github.com/CharmsDev/getrandom.git", branch = "v0.2.16-nojs" }
chrono = { git = "https://github.com/CharmsDev/chrono.git", branch = "v0.4.44-nojs" }
wasm-bindgen = { path = "stubs/wasm-bindgen" }
wasm-bindgen-macro = { path = "stubs/wasm-bindgen-macro" }
reqwest = { path = "stubs/reqwest" }
uuid = { path = "stubs/uuid" }
# mithril-stm 0.10 dropped APIs that mithril-client 0.13.2 (and mithril-common
# 0.6.43) still depend on. Pin to 0.9.5 (input-output-hk/mithril@567a8e8e,
# upstream tag 2603.1) so `cargo update` can't bump the whole tree past
# compatibility.
mithril-stm = { git = "https://github.com/CharmsDev/mithril.git", branch = "pin-mithril-stm-0.9.5" }
