[package]
name = "scrolls-api"
version = "0.1.0"
license = "MIT"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.102" }
axum = { version = "0.8", default-features = false, features = ["json", "macros"] }
candid = { version = "0.10.24" }
gloo-timers = { version = "0.3.0", features = ["futures"] }
ic-agent = { version = "0.46.0", default-features = false, features = ["wasm-bindgen"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.149" }
tower-http = { version = "0.6.8", features = ["cors"] }
tower-service = { version = "0.3.3" }
worker = { version = "0.7.5", features = ['http', 'axum'] }

[workspace]
