[package]
name = "scrolls_bitcoin"
version = "0.1.0"
edition = "2024"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.102" }
bitcoin = { version = "0.32.8" }
candid = { version = "0.10.26" }
hex = { version = "0.4" }
charms-data = { version = "14.1.0", path = "../../../charms-data" }
charms-lib = { version = "14.1.0", path = "../../../charms-lib" }
getrandom = { version = "0.2", features = ["custom"] }
ic-cdk = { version = "0.19.0" }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = { version = "0.9.34" }
