[package]
name = "scrolls_cardano"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = { version = "1.0.102" }
candid = { version = "0.10.26" }
charms-lib = { version = "14.1.0", path = "../../../charms-lib" }
cml-chain = { version = "6.2.0", default-features = false }
cml-core = { version = "6.2.0" }
getrandom = { version = "0.2", features = ["custom"] }
hex = { version = "0.4.3" }
hex-literal = { version = "1.1.0" }
ic-cdk = { version = "0.20.1" }
ic-cdk-management-canister = { version = "0.1" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
serde_yaml = { version = "0.9.34" }
async-trait = "0.1"
slog = "2.8"
mithril-client = { version = "=0.13.2", default-features = false, features = ["num-integer-backend"] }
# Pin mithril transitives so `cargo update` can't drag the tree onto a newer
# mithril-common/mithril-aggregator-* that assumes mithril-stm 0.10+ APIs.
# mithril-stm itself is pinned via `[patch.crates-io]` in scrolls/Cargo.toml.
# The non-wasm pins mirror mithril-client 0.13.2's own target gating: those
# crates aren't compiled for wasm targets (and pull in tokio features that
# aren't supported there).
mithril-common = { version = "=0.6.43", default-features = false }

[target.'cfg(not(target_family = "wasm"))'.dependencies]
mithril-aggregator-client = "=0.1.8"
mithril-aggregator-discovery = "=0.1.1"
mithril-cardano-node-internal-database = "=0.1.10"

[dev-dependencies]
cml-chain = { version = "6.2.0" }
cml-core = { version = "6.2.0" }
cml-crypto = "6.2.0"
ed25519-dalek = { version = "2" }
hex = { version = "0.4.3" }
