[package]
name = "reqwest"
version = "0.12.28"
edition = "2021"

[features]
default = []
json = []
charset = []
http2 = []
macos-system-configuration = []
stream = []
gzip = []
zstd = []
deflate = []
brotli = []
native-tls = []
native-tls-alpn = []
native-tls-vendored = []
rustls-tls = []
rustls-tls-manual-roots = []
rustls-tls-native-roots = []
rustls-tls-webpki-roots = []

[dependencies]
bytes = "1"
http = "1"
serde = "1"
url = "2"
