[package]
name = "reqwest"
version = "0.13.3"
edition = "2021"

[features]
default = []
json = []
charset = []
http2 = []
macos-system-configuration = []
stream = []
gzip = []
zstd = []
deflate = []
brotli = []
system-proxy = []
native-tls = []
native-tls-alpn = []
native-tls-no-alpn = []
native-tls-vendored = []
native-tls-vendored-no-alpn = []
rustls = []
rustls-no-provider = []
rustls-tls = []
rustls-tls-manual-roots = []
rustls-tls-native-roots = []
rustls-tls-webpki-roots = []

[dependencies]
bytes = "1"
http = "1"
serde = "1"
url = "2"
